Updating assets call

--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "name": "gusto-coffee",
+  "description": "a really cool app",
+  "version": "1.0.0",
+  "engines": {
+    "yarn": "1.x"
+  },
     "private": true,
     "scripts": {
         "heroku-prebuild": "echo This runs before Heroku installs your dependencies.",
