--- a/manifest.json
+++ b/manifest.json
@@ -1,60 +1,60 @@
 {
   "short_name": "G-Coffee",
   "name": "Gusto Coffee",
-  "theme_color": "#fff",
+  "theme_color": "#7D3C00",
   "orientation": "portrait",
-  "background_color": "#fff",
+  "background_color": "#7D3C00",
   "display": "standalone",
   "icons": [
-    {
-      "src": "icons/icon_48_48_dpi.png",
-      "type": "image/png",
-      "sizes": "48x48"
-    },
      {
-      "src": "icons/icon_72_48_dpi.png",
+      "src": "icons/icon-72x72.png",
       "type": "image/png",
       "sizes": "72x72"
     },
     {
-      "src": "icons/icon_96_48_dpi.png",
+      "src": "icons/icon-96x96.png",
       "type": "image/png",
       "sizes": "96x96"
     },
+    {
+      "src": "icons/icon-128x128.png",
+      "type": "image/png",
+      "sizes": "128x128"
+    },
      {
-      "src": "icons/icon_144_48_dpi.png",
+      "src": "icons/icon-144x144.png",
       "type": "image/png",
       "sizes": "144x144"
     },
      {
-      "src": "icons/icon_168_48_dpi.png",
+      "src": "icons/icon-152x152.png",
       "type": "image/png",
-      "sizes": "168x168"
+      "sizes": "152x152"
     },
     {
-      "src": "icons/icon_192_48_dpi.png",
+      "src": "icons/icon-192x192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "icons/icon_128_128_dpi.png",
-      "type": "image/png",
-      "sizes": "128x128"
-    },
-    {
-      "src": "icons/icon_256_128_dpi.png",
-      "type": "image/png",
-      "sizes": "256x256"
-    },
-    {
-      "src": "icons/icon_384_128_dpi.png",
+      "src": "icons/icon-384x384.png",
       "type": "image/png",
       "sizes": "384x384"
     },
     {
-      "src": "icons/icon_512_128_dpi.png",
+      "src": "icons/icon-512x512.png",
       "type": "image/png",
       "sizes": "512x512"
+    }
+    {
+      "src": "icons/120.png",
+      "type": "image/png",
+      "sizes": "120x120"
+    }
+    {
+      "src": "icons/icon-180x180.png",
+      "type": "image/png",
+      "sizes": "180x180"
     }
   ],
   "start_url": "http://127.0.0.1:8000/",
