--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "firebase": "^6.2.0",
+    "pug": "^2.0.3",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3"
   },
